fixed display issue on mobile with cart button

--- a/src/components/Layout/HeaderCartButton.module.css
+++ b/src/components/Layout/HeaderCartButton.module.css
@@ -57,3 +57,20 @@
     transform: scale(1);
   }
 }
+
+@media only screen and (max-device-width: 700px) {
+  .button {
+    width: auto;
+    height: 3rem;
+    justify-content: space-around;
+    padding: 0.75rem 1rem;
+  }
+  .btnLabel {
+    display: none;
+  }
+
+  .badge {
+    margin-left: 0.5rem;
+    padding: 0.25rem 1rem;
+  }
+}
